# embassy_preempt

./: .gitignore  404.html  Cargo.toml  hashmap.json  index.html  print.html  rust-toolchain.toml  searcher-c2a407aa.js  searchindex-ff4bb2db.js  toc-e5fa4c25.js  toc.html
.cargo/: config.toml
.github/workflows/: deploy-blog.yml
assets/: app.C4lHznok.js  docs_context-switch-arch.md.CfsGzQBQ.js  docs_context-switch-arch.md.CfsGzQBQ.lean.js  docs_index.md.BUe3VHdM.js  docs_index.md.BUe3VHdM.lean.js  index.md.B_orDjpu.lean.js  周报-Oveln_2025-10-28_ 日志系统重构.md.DylP8I-R.js  周报-Oveln_2025-10-28_ 日志系统重构.md.DylP8I-R.lean.js  周报-Oveln_index.md.DLNJ34e5.lean.js  周报-Oveln_周报一.md.CT7FVMoH.js  周报-Oveln_周报一.md.CT7FVMoH.lean.js  周报-Oveln_周报三.md.0gYzW3rC.js  周报-Oveln_周报三.md.0gYzW3rC.lean.js  周报-Oveln_周报二.md.DY5QTRWO.js  周报-Oveln_周报二.md.DY5QTRWO.lean.js  周报-Oveln_周报五.md.DquJdB2b.js  周报-Oveln_周报五.md.DquJdB2b.lean.js  周报-Oveln_周报四.md.DBk3oNUW.js  周报-Oveln_周报四.md.DBk3oNUW.lean.js  技术报告_index.md.D4yfEdGW.lean.js  技术报告_技术报告-2025-11.md.yWIODd1X.js  技术报告_技术报告-2025-11.md.yWIODd1X.lean.js  项目计划_项目开发-首日计划.md.Cn8jFJV-.js  项目计划_项目计划-20251111.md.CL99nt9r.js  项目计划_项目计划-20251111.md.CL99nt9r.lean.js
assets/chunks/: arc.Dlhyxnuo.js  basePickBy.DDhjg0b2.js  (+43 more)
blogs/: index.md  package.json
docs/: context-switch-arch.html  embassy_preempt开发杂记.html  index.html  开发记录.html  技术报告.html  设计文档.html  资料汇总.html
embassy-preempt-logs/: Cargo.toml  build.rs
embassy-preempt-platform/: Cargo.toml  README.md
embassy-preempt-platform/src/: button.rs  button_driver.rs  gpio_driver.rs  lib.rs  platform.rs  time_driver.rs  timer_driver.rs  types.rs
embassy-preempt-platform/src/stm32f401re/: button_driver.rs  cfg.rs  gpio_driver.rs  mod.rs  platform.rs  timer_driver.rs
embassy_preempt/: Cargo.toml  Makefile  build.rs  test.rs
embassy_preempt/embassy-preempt-logs/: Cargo.toml
embassy_preempt/embassy-preempt-logs/src/: lib.rs
embassy_preempt/src/: arena.rs  lib.rs  log.rs  os_core.rs  os_task.rs  ucosii.rs
embassy_preempt/src/cfg/: ucosii.rs
embassy_preempt/src/event/: mod.rs
embassy_preempt/src/executor/: mod.rs  os_core.rs  os_task.rs  task.rs  timer_queue.rs
embassy_preempt/src/executor/mem/: arena.rs
embassy_preempt/src/executor/mem/heap/: stack_allocator.rs
embassy_preempt/src/heap/: stack_allocator.rs
embassy_preempt/src/os_time/: duration.rs  instant.rs  mod.rs  timer.rs
embassy_preempt/src/port/: lang_items.rs  mod.rs  os_cpu.rs
embassy_preempt/src/port/bottom_driver/: mod.rs
embassy_preempt/src/port/time_driver/: mod.rs
exam/: Cargo.toml
exam/.cargo/: config.toml
example/: Cargo.toml  Embed.toml  README.md  build.rs  ch32v307.cfg  memory.x  rtt.cfg  rust-toolchain.toml
example/.cargo/: config.toml
example/tests/: prio_test.rs  task_create_test.rs  test_example.rs
modules/embassy-preempt-cfg/: Cargo.toml  README.md
modules/embassy-preempt-cfg/src/: lib.rs  tick.rs  ucosii.rs
modules/embassy-preempt-driver/: Cargo.toml
modules/embassy-preempt-driver/src/: led.rs  led_hal.rs  lib.rs
modules/embassy-preempt-event/: Cargo.toml  README.md
modules/embassy-preempt-event/src/: lib.rs  os_q.rs  os_sem.rs
modules/embassy-preempt-executor/: Cargo.toml  README.md
modules/embassy-preempt-executor/src/: lib.rs  os_core.rs  os_cpu.rs  os_task.rs  state_atomics.rs  state_atomics_arm.rs  task.rs  timer_queue.rs  waker.rs
modules/embassy-preempt-executor/src/mem/: arena.rs
modules/embassy-preempt-executor/src/mem/heap/: fixed_size_block.rs  mod.rs  stack_allocator.rs
modules/embassy-preempt-executor/src/mem/heap/linked_list/: hole.rs
modules/embassy-preempt-executor/src/os_time/: blockdelay.rs  duration.rs  instant.rs  mod.rs  timer.rs
modules/embassy-preempt-log/: Cargo.toml  README.md
modules/embassy-preempt-log/src/: lib.rs
modules/embassy-preempt-macros/: Cargo.toml  build.rs
modules/embassy-preempt-macros/src/: lib.rs
modules/embassy-preempt-mem/: Cargo.toml  README.md
modules/embassy-preempt-mem/src/: arena.rs  lib.rs  mod.rs
modules/embassy-preempt-mem/src/heap/: mod.rs  stack_allocator.rs
modules/embassy-preempt-mem/src/heap/linked_list/: mod.rs
modules/embassy-preempt-platform/: Cargo.toml  build.rs
modules/embassy-preempt-platform/src/: critical_section.rs  lib.rs  panic_handler.rs  platform.rs
modules/embassy-preempt-platform/src/arm/: mod.rs  panic_handler.rs
modules/embassy-preempt-platform/src/arm/chip/: mod.rs
modules/embassy-preempt-platform/src/arm/chip/stm32f401re/: mod.rs  platform.rs  timer_driver.rs
modules/embassy-preempt-platform/src/arm/driver/: mod.rs
modules/embassy-preempt-platform/src/arm/driver/button/: driver.rs  future.rs  mod.rs
modules/embassy-preempt-platform/src/arm/driver/led/: driver.rs
modules/embassy-preempt-platform/src/driver/button/: driver.rs  future.rs
modules/embassy-preempt-platform/src/memory_x/ch32v307wcu6/: memory.x
modules/embassy-preempt-platform/src/qingke/: mod.rs
modules/embassy-preempt-platform/src/qingke/chip/: mod.rs
modules/embassy-preempt-platform/src/qingke/chip/ch32v307/: platform.rs
modules/embassy-preempt-platform/src/qingke/chip/ch32v307wcu6/: mod.rs  platform.rs  timer_driver.rs  ucstk.rs
modules/embassy-preempt-platform/src/riscv/: mod.rs  panic_handler.rs
modules/embassy-preempt-platform/src/stm32f401re/: mod.rs  platform.rs  timer_driver.rs  ucstk.rs
modules/embassy-preempt-platform/src/traits/: memory_layout.rs  mod.rs  platform.rs  timer.rs
modules/embassy-preempt-port/: Cargo.toml
modules/embassy-preempt-port/src/: lang_items.rs  lib.rs
modules/embassy-preempt-port/src/bottom_driver/: Bottom.rs  mod.rs
modules/embassy-preempt-port/src/time_driver/: mod.rs
modules/embassy-preempt-structs/: Cargo.toml  README.md
modules/embassy-preempt-structs/src/: lib.rs
modules/embassy-preempt-structs/src/cell/: mod.rs  up.rs  util.rs
platform/: Cargo.toml
scripts/: git_stats.sh
周报-Oveln/: 2025-10-28: 日志系统重构.html  index.html  周报一.html  周报三.html  周报二.html  周报五.html  周报四.html
技术报告/: index.html  技术报告-2025-11.html
项目计划/: 项目开发-首日计划.html  项目计划-20251111.html
(+26 files in other folders)
