# ==================================================================
# WORKSPACE CONFIGURATION
# ==================================================================
[workspace]
resolver = "3"
members = [
    "embassy_preempt",
    "modules/embassy-preempt-log",
    "modules/embassy-preempt-structs",
    "platform"
]

[workspace.package]
version = "0.1.0"
authors = ["oveln"]
edition = "2024"
repository = "https://github.com/Oveln/embassy_preempt"
license = "MIT OR Apache-2.0"

# ==================================================================
# BUILD PROFILES
# ==================================================================

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# Test build profile
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 2
overflow-checks = true

# Benchmark build profile
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# Release build profile (optimized for performance)
[profile.release]
codegen-units = 1
debug = 0         # Generate full debug info
opt-level = 3     # Optimization level for release builds
