[package]
name = "embassy-preempt-logs"
version = "0.1.0"
authors = ["oveln"]
edition = "2024"
repository = "https://github.com/Oveln/embassy_preempt"
license = "MIT OR Apache-2.0"

[dependencies]
defmt-rtt = { version = "1.1.0", optional = true }

[features]
# Logging features - Enable different levels of logging
logs = ["log-os", "log-task", "log-mem", "log-timer", "log-scheduler"]
log-base = ["dep:defmt-rtt"]
log-os = ["log-base"]
log-task = ["log-base"]
log-mem = ["log-base"]
log-timer = ["log-base"]
log-scheduler = ["log-base"]
