# ==================================================================
# PACKAGE METADATA
# ==================================================================
[workspace.package]
version = "0.1.0"
authors = ["oveln", "liam", "noah"]
edition = "2021"
repository = "https://github.com/Oveln/embassy_preempt"
license = "MIT OR Apache-2.0"

[package]
name = "embassy_preempt"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

# ==================================================================
# LIBRARY CONFIGURATION
# ==================================================================
[lib]
harness = false
crate-type = ["rlib", "staticlib"]

# ==================================================================
# WORKSPACE CONFIGURATION
# ==================================================================
[workspace]
members = [ "embassy-preempt-logs"]
# members = ["embassy_preempt_logs"]
# members = ["platform"]

[workspace.dependencies]

# ==================================================================
# DEPENDENCIES
# ==================================================================
[dependencies]
# Core embedded development dependencies
cortex-m = { version = "0.7" }
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = { version = "1.1", features = ["restore-state-bool"] }

# Logging and debugging dependencies (optional)
defmt = { version = "1.0.1", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
embassy-preempt-logs = { path = "embassy-preempt-logs", optional = true }

# Testing dependencies (optional)
defmt-test = {version = "0.4.0", optional = true}

# Synchronization and utility dependencies
spin = "0.10.0"
spinning_top = { version = "0.2.5", optional = true }           # Conditional dependency (see features)
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

# Hardware and platform dependencies
# cortex-m-semihosting = "0.5.0"
stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645", features = [
    "metadata",
] }
cortex-m-semihosting = { version = "0.5.0", optional = true }

# Development dependencies for testing
[dev-dependencies]
defmt-test = "0.3"

# ==================================================================
# BUILD PROFILES
# ==================================================================
# Development build profile (optimized for debug builds)
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# Test build profile
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 2
overflow-checks = true

# Benchmark build profile
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# Release build profile (optimized for performance)
[profile.release]
codegen-units = 1
debug = 0         # Generate full debug info
opt-level = 3     # Optimization level for release builds

# ==================================================================
# FEATURE FLAGS
# ==================================================================
# Default features enabled when no specific features are selected
[features]
default = [
    "GPIOC",
    "rt",
    "use_spin",
    "unstable-pac",
    "time_driver_tim3",
    "OS_STACK_LESS_THAN_64",
    "cortex_m",
    "OS_MEM_EN",
    "OS_PRIO_LESS_THAN_64",
    "OS_ARG_CHK_EN",
    "OS_TIME_GET_SET_EN",
    "OS_TASK_CREATE_EXT_EN",
    "OS_TASK_REG_TBL_SIZE",
]

# Logging features - Enable different levels of logging
logs = ["log-os", "log-task", "log-mem", "log-timer", "log-scheduler"]
log-base = ["dep:defmt", "dep:panic-probe"]
log-os = ["embassy-preempt-logs/log-os", "log-base"]
log-task = ["embassy-preempt-logs/log-task", "log-base"]
log-mem = ["embassy-preempt-logs/log-mem", "log-base"]
log-timer = ["embassy-preempt-logs/log-timer", "log-base"]
log-scheduler = ["embassy-preempt-logs/log-scheduler", "log-base"]
semihosting = ["dep:cortex-m-semihosting"]

# Testing features
test = ["dep:defmt", "dep:defmt-test"]
test-stack = []

# Experimental features
nightly = []

# OS Configuration Features - Control which OS features are enabled
# These are defined in build.rs
OS_EVENT_EN = []
OS_EVENT_NAME_EN = []
OS_SCHED_LOCK_EN = []
OS_TASK_DEL_EN = []
OS_PRIO_LESS_THAN_64 = []
OS_PRIO_LESS_THAN_256 = []
OS_MEM_EN = []
OS_MAX_MEM_PART_EN = []
OS_MBOX_EN = []
OS_TASK_STAT_EN = []
OS_MEM_NAME_EN = []
OS_MUTEX_EN = []
OS_Q_EN = []
OS_SEM_EN = []
OS_TASK_CREATE_EXT_EN = []
OS_TASK_PROFILE_EN = []
OS_TASK_NAME_EN = []
OS_SAFETY_CRITICAL = []
OS_ARG_CHK_EN = []
OS_MAX_QS = []
OS_TASK_REG_TBL_SIZE = []
OS_TASK_STAT_STK_CHK_EN = []
OS_MAX_MEM_PART = []
OS_FLAG_EN = []
OS_MAX_FLAGS = []
OS_TMR_EN = []
OS_CPU_HOOKS_EN = []
OS_DEBUG_EN = []
OS_TIME_GET_SET_EN = []
OS_SAFETY_CRITICAL_IEC61508 = []

# Architecture features
cortex_m = []

# Stack size configuration features
OS_STACK_LESS_THAN_64 = []
OS_STACK_LESS_THAN_256 = []

# Additional OS features
OS_EVENT_MULTI_EN = []

# Platform features - Enable different platforms or features
std = []
host = []
atomics = [] # Use hardware atomics from core::sync::atomic
xip = []     # Enable optimizations for execute in place

# Time driver features - Select which timer to use for time operations
time_driver_tim1 = []
time_driver_tim2 = []
time_driver_tim3 = []
time_driver_tim4 = []
time_driver_tim5 = []
time_driver_tim8 = []
time_driver_tim9 = []
time_driver_tim12 = []
time_driver_tim15 = []
time_driver_tim20 = []
time_driver_tim21 = []
time_driver_tim22 = []
time_driver_tim23 = []
time_driver_tim24 = []

# STM32F401RE specific features
stm32f401re = ["stm32-metapac/stm32f401re"]

# Enable `stm32-metapac`'s `rt` feature (runtime support)
rt = ["stm32-metapac/rt"]

# Power management features
low-power = []
delay_idle = []

# GPIO configuration features
GPIOC = []
GPIOA = []

# Unstable PAC (Peripheral Access Crate) re-export
# This provides access to raw hardware registers via embassy_stm32::pac
unstable-pac = []

# Synchronization method - Use spinning for synchronization
use_spin = ["spinning_top"]

# Auto-generate memory.x file for linker configuration
memory-x = ["stm32-metapac/memory-x"]

# ==================================================================
# TARGET-SPECIFIC DEPENDENCIES & LINTS
# ==================================================================
# Loom (model checking tool) dependencies for concurrent code verification
[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

# Rust lints configuration
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
