[package]
name = "exam"
version = "0.1.0"
edition = "2024"

[workspace]


[dependencies]
cortex-m = { version = "0.7"}
cortex-m-rt = { version = "0.7", features = ["device"]}
defmt = { version = "1.0.1", optional = true}
defmt-rtt = { version = "1.1.0", optional = true}
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true}

critical-section = { version = "1.1", features=["restore-state-bool"]}

embassy-preempt-executor = { path = "../modules/embassy-preempt-executor" }
# executor = { path = "../modules/executor" , features = ["stm32f401re","memory-x","alarm_test"] }
embassy-preempt-app = { path = "../modules/embassy-preempt-app", features = ["stm32f401re"] }

# executor = { workspace = true, optional = true, features = ["stm32f401re","defmt"] }
# app = { workspace = true, optional = true}

stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645", features = ["metadata", "stm32f401re", "rt"]}



# cargo build/run
[profile.dev]
codegen-units = 1           # 控制代码生成单元的数量
debug = 0
debug-assertions = true     # 启用调试断言
incremental = false         # 禁用增量编译
opt-level = 2 
overflow-checks = true      # 启用整数溢出检查

# cargo build --release
[profile.release]
codegen-units = 1
debug = 0
opt-level = 3
lto = true      # 启用链接时优化

[features]
alarm_test = ["dep:defmt","panic-probe","defmt-rtt"]
defmt = ["dep:defmt","panic-probe","defmt-rtt"]
# memory-x = ["executor/memory-x"]     # If you have not added memory.x, you need to activate the feature