[package]
name = "exam"
version = "0.1.0"
edition = "2024"

[workspace]


[dependencies]
cortex-m = { version = "0.7"}
cortex-m-rt = { version = "0.7", features = ["device"]}
defmt = { version = "1.0.1", optional = true}
defmt-rtt = { version = "1.1.0", optional = true}
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true}

critical-section = { version = "1.1", features=["restore-state-bool"]}

embassy-preempt-executor = { path = "../modules/embassy-preempt-executor"}
# executor = { path = "../modules/executor" , features = ["stm32f401re","memory-x","alarm_test"] }
embassy-preempt-driver = { path = "../modules/embassy-preempt-driver", features = ["stm32f401re"] }
embassy-preempt-log = { path = "../modules/embassy-preempt-log"}
embassy-preempt-platform = { path = "../modules/embassy-preempt-platform" }
# executor = { workspace = true, optional = true, features = ["stm32f401re","defmt"] }
# app = { workspace = true, optional = true}

stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645", features = ["metadata", "stm32f401re", "rt"]}



# cargo build/run
[profile.dev]
codegen-units = 1           # 控制代码生成单元的数量
debug = 2
debug-assertions = true     # 启用调试断言
incremental = false         # 禁用增量编译
opt-level = 0
overflow-checks = true      # 启用整数溢出检查

# cargo build --release
[profile.release]
codegen-units = 1
debug = 0
opt-level = 3
lto = true      # 启用链接时优化

[features]
# memory-x = ["executor/memory-x"]     # If you have not added memory.x, you need to activate the feature
default = ["logs"]
logs = ["log-os", "log-task", "log-mem", "log-timer", "log-scheduler"]
log-base = ["embassy-preempt-log/log-base", "dep:defmt", "dep:panic-probe", "embassy-preempt-executor/log-base"]
log-os = ["log-base", "embassy-preempt-log/log-os", "embassy-preempt-executor/log-os"]
log-task = ["log-base", "embassy-preempt-log/log-task", "embassy-preempt-executor/log-task"]
log-mem = ["log-base", "embassy-preempt-log/log-mem", "embassy-preempt-executor/log-mem"]
log-timer = ["log-base", "embassy-preempt-log/log-timer", "embassy-preempt-executor/log-timer"]
log-scheduler = ["log-base", "embassy-preempt-log/log-scheduler", "embassy-preempt-executor/log-scheduler"]
