[package]
name = "example"
version = "0.1.0"
edition = "2024"

[workspace]

# Disable testing for all binaries to avoid test crate compilation errors
# [[bin]]
# name = "led_test"
# test = false

[[bin]]
name = "space_performance"
test = false

[[bin]]
name = "stack_cost_test"
test = false

[[bin]]
name = "hardware_test"
test = false

[[bin]]
name = "sync_bottom_test"
test = false

[[bin]]
name = "preempt_test"
test = false

[[bin]]
name = "usart_test"
test = false

[[bin]]
name = "scheduling1_test"
test = false

[[bin]]
name = "scheduling2_test"
test = false

[[bin]]
name = "time_performance"
test = false

[[bin]]
name = "sync_time_performance"
test = false

[[bin]]
name = "comprehensive_test"
test = false

[[bin]]
name = "bottom_test"
test = false

[[bin]]
name = "prio_test"
test = false

[[bin]]
name = "usart"
test = false

[[bin]]
name = "switch_test"
test = false

[[bin]]
name = "iic_test"
test = false

[[test]]
name = "task_create_test"
harness = false

[[test]]
name = "test_example"
harness = false

[[test]]
name = "prio_test"
harness = false


[dependencies]
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7", features = ["device"], optional = true}
# panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }

qingke-rt = { version = "0.5.0", optional = true }

critical-section = { version = "1.1", features = ["restore-state-bool"] }

embassy-preempt-executor = { path = "../modules/embassy-preempt-executor" }
embassy-preempt-log = { path = "../modules/embassy-preempt-log" }
embassy-preempt-platform = { path = "../modules/embassy-preempt-platform", features = [
    "memory-x",
] }
embassy-preempt-mem = { path = "../modules/embassy-preempt-mem" }
embassy-preempt-macros = { path = "../modules/embassy-preempt-macros" }

cortex-m-semihosting = { version = "0.5" }

spin = { version = "0.10.0" }

[dev-dependencies]
defmt-test = { version = "0.4.0" }
defmt = { version = "1.0.1"}
defmt-rtt = { version = "1.1.0"}


# cargo build/run
[profile.dev]
codegen-units = 1       # 控制代码生成单元的数量
debug = 2
debug-assertions = true # 启用调试断言
incremental = false     # 禁用增量编译
lto = true        # 启用链接时优化
opt-level = 1
overflow-checks = true  # 启用整数溢出检查

# cargo build --release
[profile.release]
codegen-units = 1
debug = 2
opt-level = 3
lto = true        # 启用链接时优化

[features]
default = [
    "logs",
    "embassy-preempt-platform/memory-x",
]
logs = ["log-os", "log-task", "log-mem", "log-timer", "log-scheduler"]
log-base = [
    "embassy-preempt-log/log-base",
]
# log-os = ["log-base", "embassy-preempt-log/log-os", "embassy-preempt-executor/log-os"]
# log-task = ["log-base", "embassy-preempt-log/log-task", "embassy-preempt-executor/log-task"]
# log-mem = ["log-base", "embassy-preempt-log/log-mem", "embassy-preempt-executor/log-mem"]
# log-timer = ["log-base", "embassy-preempt-log/log-timer", "embassy-preempt-executor/log-timer"]
# log-scheduler = ["log-base", "embassy-preempt-log/log-scheduler", "embassy-preempt-executor/log-scheduler"]
log-os = [
    "log-base",
    "embassy-preempt-log/log-os",
]
log-task = [
    "log-base",
    "embassy-preempt-log/log-task",
]
log-mem = [
    "log-base",
    "embassy-preempt-log/log-mem",
]
log-timer = [
    "log-base",
    "embassy-preempt-log/log-timer",
]
log-scheduler = [
    "log-base",
    "embassy-preempt-log/log-scheduler",
]

cortex-m = ["dep:cortex-m", "cortex-m-rt"]
stm32f401re = ["cortex-m", "embassy-preempt-platform/stm32f401re"]

qingke = []
ch32v307wcu6 = ["qingke", "embassy-preempt-platform/ch32v307wcu6", "dep:qingke-rt", "qingke-rt/v4"]
