[package]
name = "embassy-preempt-logs"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
defmt-rtt = { version = "1.1.0", optional = true }

[features]
# Logging features - Enable different levels of logging
logs = ["log-os", "log-task", "log-mem", "log-timer", "log-scheduler"]
log-base = ["dep:defmt-rtt"]
log-os = ["log-base"]
log-task = ["log-base"]
log-mem = ["log-base"]
log-timer = ["log-base"]
log-scheduler = ["log-base"]
